--- a/Rapport Stage/texFiles/conclusion.tex
+++ b/Rapport Stage/texFiles/conclusion.tex
@@ -3,23 +3,23 @@
 
 \section{Rappel de la problèmatique}
 
-Notre problèmatique à la base était la résolution de sudoku Standart ce que nous avons reussi. Nous avons donc pour avoir une autre vision du problème nous avons choisi de généraliser celui-ci. Ce qui nous a ouvert à des pistes d'améliorations dont nous n'aurions pas eu besoin dans le cas de la résolution de sudoku.
+Notre problèmatique à la base était la résolution de sudoku Standart ce que nous avons reussi. Nous avons donc pour avoir une autre vision du problème nous avons choisi de généraliser celui-ci. Ce qui nous a ouvert à des pistes d'améliorations dont nous n'aurions pas eu besoin dans le cas de la résolution de sudoku standart.
 
 \section{Réponse apportées}
-Nous avons en ce qui cobncerne la résolution de sudoku standart deux programme perttant
+Nous avons en ce qui concerne la résolution de sudoku standart deux programmes permettant leurs résolution quand aà la généralisation de ceux-ci nous avons un programes parfaitement fonctionnel permettant sa résolution via Cplex.
 \section{Piste d'amélioration}
-Nous pourrions pour voir les limite de l'algorithme du Cplex l'utiliser sur un grand volume de sudopku et voir le temps mis pour tous les résoudre en une seule fois. Nous pourrions essayer avec des sudokus d'une taille extrème pour en vérifier la consistence.\newline Comme dit précédemment en ce qui concerne la déduction des valeurs nous pouvons éviter beaucoup de test inutiles grace à cela pour amélioré notre algorithme utilisant le backtracking.\newline
-Nous pouvons aussi pour les test sur les sudoku de taille standart tester nos algorithme sur les classe de sudoku décrite dans cette article:\newline
+Nous pourrions pour voir les limites de l'algorithme du Cplex l'utiliser sur un grand volume de sudoku et voir le temps mis pour tous les résoudre en une seule fois. Nous pourrions essayer avec des sudokus d'une taille extrème pour en vérifier la consistence.\newline Comme dit précédemment en ce qui concerne la déduction des valeurs nous pouvons éviter beaucoup de test inutiles grace à cela pour amélioré notre algorithme utilisant le backtracking.\newline
+Nous pouvons aussi pour les tests sur les sudokus de taille standart tester nos algorithme sur les classes de sudoku décrite dans cette article:\newline
 \cite{Differents}
 \newline
-Nous expliquant que tout les sudoku possibles peuvent être obtenu par plusieurs action élémentaire à partir de 5472730538 grilles de sudoku que nous pouvons qualifier d'élémentaire.
-Cela nous permettrait d'affirmert de manière solide que nos algorithme fonctionne dans tout les cas possible.
+Nous expliquant que tout les sudoku possibles peuvent être obtenu par plusieurs actions élémentaires à partir de 5472730538 grilles de sudoku que nous pouvons qualifier d'élémentaires.
+Cela nous permettrait d'affirmer de manière solide que nos algorithme fonctionnent dans tout les cas possibles.
 
 \section{Les apports du stage}
 
 \subsection{les apports à l'entreprise}
-Grace à ce Stage les chercheurs auront une meilleur idée de l'utilisation de Cplex sur python pour la résolution de leurs problème et grace notre algorithme utilisant le backtracking nous pouvons appuyé que l'utilisation des algorithmes de Cplex est bien plus éfficaces que les méthodes que nous pouvons coder de façon artisanal sans y consacrer une très grandes quantité de connaissances.
+Grace à ce Stage les chercheurs auront une meilleur idée de l'utilisation de Cplex sur python pour la résolution de leurs problèmes et grace à notre algorithme utilisant le backtracking nous pouvons appuyer que l'utilisation des algorithmes de Cplex est bien plus efficaces que les méthodes que nous pouvons coder de façon artisanal sans y consacrer une très grande quantité de connaissances.
 
 \subsection{les apports personels}
 
-Avant ce stage je n'avais aucune connaissance en résolution de problème d'optimisation linéaire. Grace à ce stage je conais maintenant un de ces outil de résolution les plus puissant. J'ai aussi pu apprendrer plusieurs termes de mathématique combinatoire que je n'aurais jamais connu autrezment. J'ai maintenant la connaissance de plusieurs algorithme de résolution de problème de satisfaction de contrainte. J'ai nmaintenant aussi les connaissance basique nnécéssaire quant à la programmation d'interface graphique avec Qt.
+Avant ce stage je n'avais aucune connaissance en résolution de problème d'optimisation linéaire. Grace à ce stage je connais maintenant un de ses outils de résolution les plus puissant. J'ai aussi pu apprendre plusieurs termes de mathématique combinatoire que je n'aurais jamais connu autrement. J'ai maintenant la connaissance de plusieurs algorithme de résolution de problème de satisfaction de contrainte. J'ai nmaintenant aussi les connaissances basique nécéssaire quant à la programmation d'interface graphique avec Qt.
