--- a/Rapport Stage/texFiles/problematique.tex
+++ b/Rapport Stage/texFiles/problematique.tex
@@ -3,8 +3,8 @@
 \section{Contexte général}\label{contexte-guxe9nuxe9ral}}
 \subsection{Qu'est ce que le sudoku}
 
-Le sudoku est un jeu représenté par une grille de 81 case découpé en 9 lignes et 9 colonnes et 9 sous-grilles 3 par 3.
-Le but du jeu est de remplir chaque ligne avec 9 chiffre allant de 1 à 9 en faisant en sorte qu'il n'y ai pas le même chiffre plusieurs fois sur la même ligne colonne ou dans la même sous grille.
+Le sudoku est un jeu représenté par une grille de 81 cases découpées en 9 lignes et 9 colonnes et 9 sous grilles 3 par 3.
+Le but du jeu est de remplir chaque ligne avec 9 chiffres allant de 1 à 9 en faisant en sorte qu'il n'y ai pas le même chiffre plusieurs fois sur la même ligne colonne ou dans la même sous grille.
 
 \begin{figure}[!h]
 \centering
@@ -15,14 +15,14 @@ Le but du jeu est de remplir chaque ligne avec 9 chiffre allant de 1 à 9 en fai
 \hypertarget{Contexte du problème}{%
 \section{Contexte du problème}\label{Contexte_du_probleme}}
 
-La résolution de sudoku est un sujet ou plusieurs solutions existent et où c'est dans la complexité\footnote{le nombre d'action réalisé durant la résolution} des différentes solution que réside la difficulté la résolution. Nous pouvons aussi rendre compte de résolution de sudoku avec des règles spécifiques.
+La résolution de sudoku est un sujet où plusieurs solutions existent et où c'est dans la complexité\footnote{le nombre d'action réalisé durant la résolution} et le temps de calcul des différentes solution que réside la difficulté. Nous pouvons aussi rendre compte de résolution de sudoku avec des règles spécifiques.
 \newline
 tel que:
 
 \begin{figure}[!h]
 \centering
 \includegraphics[width=5cm]{./images/Sudoku_Special.png}\label{Sudoku_Special}
-\caption{Sudoku où l'on applique la règle de l'unicité des chiffres sur les diagonnales.}
+\caption{Sudoku où l'on applique la règle de l'unicité des chiffres sur les diagonales.}
 \end{figure}
 
-Dans ce mémoire nous allons éssentiellement parler de deux d'entre elles celle de la résolution de sudoku vu sous l'angle d'un problème d'optimisation linéaire grace a l'algorithme du simplex et une autre plus simple celle de l'algorithme du backtraking.
+Dans ce mémoire nous allons éssentiellement parler de deux d'entre elles celle de la résolution de sudoku vu sous l'angle d'un problème d'optimisation linéaire grace à l'algorithme du simplex et une autre plus simple celle de l'algorithme du backtraking.
